Fixed teaser spacing issues

--- a/web/themes/custom/service-paths-theme/components/03-organisms/section/section-teaser/section-teaser.scss
+++ b/web/themes/custom/service-paths-theme/components/03-organisms/section/section-teaser/section-teaser.scss
@@ -4,12 +4,12 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  padding: space(2) 0;
+  padding: space(2) 0 0;
   margin-bottom: var(--space-elements);
 
   @include above($width-large) {
     flex-direction: row;
-    padding: space(5) space(2);
+    padding: space(5) space(2) space(3);
   }
 
   .teaser {
